--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "lodash-contrib": "^241.4.14",
-    "progress-stream": "^0.5.0"
+    "lodash-contrib": "^241.4.14"
   }
 }
